src/snapshots/alma__parser__tests__module_parser-61.snap
---
source: src/parser.rs
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain : Fruit\n\nsignature : Fruit\n\ntest = 5\n\")"

---
Input:

module Test exposing (main)

main : Fruit

signature : Fruit

test = 5


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: 22,
                end: 26,
                line: 1,
                column: 22,
                value: Identifier(
                    Node {
                        start: 22,
                        end: 26,
                        line: 1,
                        column: 22,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            TypeSignature(
                TypeSignature {
                    name: Node {
                        start: 29,
                        end: 33,
                        line: 3,
                        column: 0,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    typ: App(
                        Node {
                            start: 36,
                            end: 41,
                            line: 3,
                            column: 7,
                            value: Constructor_ {
                                name: Node {
                                    start: 36,
                                    end: 41,
                                    line: 3,
                                    column: 7,
                                    value: CapitalizedIdentifier_ {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                    },
                                },
                                params: [],
                            },
                        },
                    ),
                },
            ),
            TypeSignature(
                TypeSignature {
                    name: Node {
                        start: 43,
                        end: 52,
                        line: 5,
                        column: 0,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 4,
                            },
                        },
                    },
                    typ: App(
                        Node {
                            start: 55,
                            end: 60,
                            line: 5,
                            column: 12,
                            value: Constructor_ {
                                name: Node {
                                    start: 55,
                                    end: 60,
                                    line: 5,
                                    column: 12,
                                    value: CapitalizedIdentifier_ {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                    },
                                },
                                params: [],
                            },
                        },
                    ),
                },
            ),
            Untyped(
                Pattern(
                    Node {
                        start: 62,
                        end: 66,
                        line: 7,
                        column: 0,
                        value: Identifier(
                            Node {
                                start: 62,
                                end: 66,
                                line: 7,
                                column: 0,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 5,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: 69,
                        end: 70,
                        line: 7,
                        column: 7,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                5.0,
                            ),
                        },
                    },
                ),
            ),
        ],
        type_definitions: [],
    },
    [],
)
