src/snapshots/alma__parser__tests__module_parser-62.snap
---
source: src/parser.rs
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain : Fruit a b\n\nsignature : Fruit b\n\ntest = 5\n\")"

---
Input:

module Test exposing (main)

main : Fruit a b

signature : Fruit b

test = 5


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: 22,
                end: 26,
                line: 1,
                column: 22,
                value: Identifier(
                    Node {
                        start: 22,
                        end: 26,
                        line: 1,
                        column: 22,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            TypeSignature(
                TypeSignature {
                    name: Node {
                        start: 29,
                        end: 33,
                        line: 3,
                        column: 0,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    typ: App(
                        Node {
                            start: 36,
                            end: 45,
                            line: 3,
                            column: 7,
                            value: Constructor_ {
                                name: Node {
                                    start: 36,
                                    end: 41,
                                    line: 3,
                                    column: 7,
                                    value: CapitalizedIdentifier_ {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                    },
                                },
                                params: [
                                    Var(
                                        Node {
                                            start: 42,
                                            end: 43,
                                            line: 3,
                                            column: 13,
                                            value: Identifier_ {
                                                name: SymbolU32 {
                                                    value: 4,
                                                },
                                            },
                                        },
                                    ),
                                    Var(
                                        Node {
                                            start: 44,
                                            end: 45,
                                            line: 3,
                                            column: 15,
                                            value: Identifier_ {
                                                name: SymbolU32 {
                                                    value: 5,
                                                },
                                            },
                                        },
                                    ),
                                ],
                            },
                        },
                    ),
                },
            ),
            TypeSignature(
                TypeSignature {
                    name: Node {
                        start: 47,
                        end: 56,
                        line: 5,
                        column: 0,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 6,
                            },
                        },
                    },
                    typ: App(
                        Node {
                            start: 59,
                            end: 66,
                            line: 5,
                            column: 12,
                            value: Constructor_ {
                                name: Node {
                                    start: 59,
                                    end: 64,
                                    line: 5,
                                    column: 12,
                                    value: CapitalizedIdentifier_ {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                    },
                                },
                                params: [
                                    Var(
                                        Node {
                                            start: 65,
                                            end: 66,
                                            line: 5,
                                            column: 18,
                                            value: Identifier_ {
                                                name: SymbolU32 {
                                                    value: 5,
                                                },
                                            },
                                        },
                                    ),
                                ],
                            },
                        },
                    ),
                },
            ),
            Untyped(
                Pattern(
                    Node {
                        start: 68,
                        end: 72,
                        line: 7,
                        column: 0,
                        value: Identifier(
                            Node {
                                start: 68,
                                end: 72,
                                line: 7,
                                column: 0,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 7,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: 75,
                        end: 76,
                        line: 7,
                        column: 7,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                5.0,
                            ),
                        },
                    },
                ),
            ),
        ],
        type_definitions: [],
    },
    [],
)
